deploy/docker-registry/docker-registry-service.yml
#
#  Copyright (c) 2020 Red Hat, Inc.
#    This program and the accompanying materials are made
#    available under the terms of the Eclipse Public License 2.0
#    which is available at https://www.eclipse.org/legal/epl-2.0/
#
#  SPDX-License-Identifier: EPL-2.0
#
#  Contributors:
#    Red Hat, Inc. - initial API and implementation

apiVersion: v1
kind: Service
metadata:
  name: docker-registry
  labels:
    app: che
    component: docker-registry
spec:
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 5000
  selector:
    app: che
    component: docker-registry
