deploy/docker-registry/docker-registry-ingress.yml
#
#  Copyright (c) 2020 Red Hat, Inc.
#    This program and the accompanying materials are made
#    available under the terms of the Eclipse Public License 2.0
#    which is available at https://www.eclipse.org/legal/epl-2.0/
#
#  SPDX-License-Identifier: EPL-2.0
#
#  Contributors:
#    Red Hat, Inc. - initial API and implementation

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
  name: docker-registry
  labels:
    app: che
    component: docker-registry
spec:
  tls:
    - hosts:
      - ${domain}
      secretName: ${secret}
  rules:
  - host: docker-registry-${namespace}.${domain}
    http:
      paths:
      - backend:
          serviceName: docker-registry
          servicePort: 5000
        path: /
